# pdq

./: .gitignore  BACKLOG.md  CMakeLists.txt  README.md  ROADMAP.md  buffer.c  buffer.h  db.c  db.h  delete.c  delete.h  fs.c  fs.h  html.c  html.h  import_jorf.sh  import_legi.sh  jorf.sh  jorflegi.c  jorflegi.h  json.c  json.h  legi.sh  links.py  parse.h  pdq.c  pdq.h  readarcfile.c  readarcfile.h  sig.c  sig.h  signature.c  signature.h  snums.py  tag.c  tag.h  timestamp.c  timestamp.h  timings.h  uri.c  (+1 more)
doc/dole_dtd_maj/: .~lock.Documentation_XML_bases_Legifrance_20181017_.doc#  Documentation_XML_bases_Legifrance_20181017_.doc
doc/dole_dtd_maj/LEGIFRANCE_20181018_dtd/acco/: acco_texte.dtd
doc/dole_dtd_maj/LEGIFRANCE_20181018_dtd/cnil/: lien.dtd  texte_cnil.dtd
doc/dole_dtd_maj/LEGIFRANCE_20181018_dtd/constit/: constit_texte.dtd  contenu.dtd  meta_juri.dtd
doc/dole_dtd_maj/LEGIFRANCE_20181018_dtd/dole/: dole_dossier.xsd
doc/dole_dtd_maj/LEGIFRANCE_20181018_dtd/jade/: jade_texte.dtd  meta_commun.dtd  meta_juri.dtd  xhtml1-transitional.dtd
doc/dole_dtd_maj/LEGIFRANCE_20181018_dtd/jorf/: jorf_article.dtd  jorf_conteneur.dtd  jorf_section_ta.dtd  jorf_texte_struct.dtd  jorf_texte_version.dtd  lien.dtd  lien_art.dtd  meta_commun.dtd
doc/dole_dtd_maj/LEGIFRANCE_20181018_dtd/jorf_simple/: jorf_conteneur.dtd  jorf_texte.dtd
doc/dole_dtd_maj/LEGIFRANCE_20181018_dtd/juri/: juri_texte.dtd
doc/dole_dtd_maj/LEGIFRANCE_20181018_dtd/kali/: contenu.dtd  kali_article.dtd  kali_conteneur.dtd  kali_section_ta.dtd  kali_texte_struct.dtd  kali_texte_version.dtd  lien.dtd  lien_art.dtd  meta_texte_chronicle.dtd
doc/dole_dtd_maj/LEGIFRANCE_20181018_dtd/legi/: legi_article.dtd  legi_section_ta.dtd  legi_texte_struct.dtd  legi_texte_version.dtd  lien_art.dtd  lien_section_ta.dtd  lien_txt.dtd  meta_commun.dtd
doc/dole_dtd_maj/LEGIFRANCE_20181018_dtd/sarde/: sarde_bloc.dtd  sarde_element.dtd  xhtml1-transitional.dtd
pybench/: readtar.py
