cmake_minimum_required(VERSION 3.10)
project(pdq)
include(FindLibXml2)
if(CMAKE_HOST_APPLE)
	set(LibArchive_INCLUDE_DIRS /usr/local/opt/libarchive/include)
    set(LibArchive_INCLUDE_DIR /usr/local/opt/libarchive/include)
    set(LibArchive_LIBRARIES /usr/local/opt/libarchive/lib)
endif()
include_directories(${LibArchive_INCLUDE_DIR})
link_directories(${LibArchive_LIBRARIES})
find_package(LibXml2 REQUIRED)
if(LibXml2_FOUND)
    include_directories(${LIBXML2_INCLUDE_DIR})
    #link_directories(${LIBXML2_LIBRARIES})
endif()
add_executable(pdq pdq.h pdq.c uri.h uri.c parse.h jorflegi.h jorflegi.c fs.h fs.c json.h json.c)
target_link_libraries(pdq ${LIBXML2_LIBRARIES} -larchive)

